# google-io-hackathon

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  build_dataset2_search_tree.py  docker-compose.yml  environment.yml  scrape_dataset2_products.py
backend/: .env.example  .gitignore  README.md  __init__.py  database.py  main.py  models.py  pyproject.toml  store.py
backend/config/: agents.py
backend/scripts/: test_search_tree_endpoints.py  test_tryon_guardrail.py
backend/services/: __init__.py  gemini.py  guardrail_agent.py  replicate_service.py  s3.py  search_tree.py  tryon_agent.py
data/: dataset2_search_tree.json  gymshark_closet_inventory.json  gymshark_search_tree.json
docs/: AGENT_WORKFLOW.md  CLOSET_STUDIO.md  Google I_O Hackathon Doc.md  RETAIL_STYLIST_STUDIO.md  backend_api_surface.md  backend_refinement_plan.md  db_handoff_tryon_guardrail_agents.md
frontend/: .env.example  DESIGN_DOC.md  README.md  index.html  metadata.json  server.ts  vite.config.ts
frontend/src/: App.tsx  MobileApp.tsx  api.ts  data.ts  index.css  main.tsx  types.ts
recommender-agent/: .dockerignore  .env.example  AGENT_WORKFLOW_VISUAL.md  ARCHITECTURE_DECISION_FRAMEWORK.md  Dockerfile  README.md  app.py  pyproject.toml
recommender-agent/examples/: preference_stack.txt  request.json  sample_output.json
recommender-agent/output/: clerk-recommendation-test.html
recommender-agent/recommender_agent/: __init__.py  agent.py  catalog.py  cli.py  llm.py
tests/: test_full_flow.py
tests/fixtures/: README.md  sample_catalog.json  sample_recommendations.json
