[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.14",
    "fastapi>=0.136.3",
    "google-genai>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "replicate>=1.0.7",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
