[project]
name = "backend"
version = "0.1.0"
description = "ClosetAI Backend — AI-powered in-store stylist copilot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.14",
    "fastapi>=0.136.3",
    "google-genai>=1.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "replicate>=1.0.7",
    "uvicorn>=0.47.0",
]
