[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recommender-agent"
version = "0.1.0"
description = "Standalone FastAPI service for agentic product-set recommendations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=1.0.0",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.47.0",
]

[tool.setuptools.packages.find]
include = ["recommender_agent*"]
